--- a/.env
+++ b/.env
@@ -14,6 +14,12 @@ DB_PORT=3306
 DB_DATABASE=admin-all
 DB_USERNAME=root
 DB_PASSWORD=
+#DB_CONNECTION=mysql
+#DB_HOST=ec2-18-60-26-100.ap-south-2.compute.amazonaws.com
+#DB_PORT=3306
+#DB_DATABASE=jippymart
+#DB_USERNAME=devuser
+#DB_PASSWORD=Dev@1234
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
